# saros-sdk-docs

./: .gitignore  CONTRIBUTING.md  EXAMPLE_GALLERY.md  LICENSE  PROJECT_PLAN.md  README.md  SDK_IMPLEMENTATION_GUIDE.md  package-lock.json  package.json  server.js  troubleshooting.md
.github/workflows/: deploy.yml
.project-docs/: WINNING_STRATEGY.md
api-reference/: rust-sdk.md  typescript-sdk.md
code-examples/rust/: Cargo.toml
code-examples/rust/01-basic-swap/: .env.example  README.md
code-examples/rust/01-basic-swap/src/: simple_main.rs  swap_optimizer.rs
code-examples/rust/01-basic-swap/tests/: integration.rs
code-examples/rust/02-auto-compound/: .env.example  README.md
code-examples/rust/02-auto-compound/src/: auto_compounder.rs  compound_strategy.rs  gas_optimizer.rs  reward_harvester.rs  scheduler.rs  types.rs
code-examples/rust/03-impermanent-loss-calc/: .env.example  Cargo.toml
code-examples/rust/03-impermanent-loss-calc/src/: il_calculator.rs  main.rs  price_monitor.rs  report_generator.rs
code-examples/rust/04-dlmm-range-orders/: .env.example  Cargo.toml  README.md
code-examples/rust/04-dlmm-range-orders/src/: bin_calculations.rs  execution_engine.rs  order_monitor.rs  types.rs
code-examples/rust/05-multi-hop-routing/: README.md
code-examples/rust/05-multi-hop-routing/src/: arbitrage_detector_complex.rs  main.rs  route_finder.rs  route_finder_complex.rs
code-examples/rust/mock-rust-sdk/: Cargo.toml
code-examples/rust/mock-rust-sdk/src/: types.rs
code-examples/typescript/01-swap-with-slippage/: .env.example  package.json
code-examples/typescript/01-swap-with-slippage/src/: PriceMonitor.ts  SwapManager.ts  index.ts  saros-sdk-mock.ts
code-examples/typescript/01-swap-with-slippage/src/utils/: connection.ts  logger.ts  tokens.ts
code-examples/typescript/02-auto-compound/: package.json  tsconfig.json
code-examples/typescript/02-auto-compound/src/: AutoCompounder.ts  index.ts
code-examples/typescript/02-auto-compound/src/utils/: logger.ts  notifications.ts
code-examples/typescript/03-impermanent-loss-calc/: .env.example  README.md  package.json  tsconfig.json
code-examples/typescript/03-impermanent-loss-calc/src/: DLMMCalculator.ts  FeeAnalyzer.ts  ILErrorHandler.ts  index.ts
code-examples/typescript/03-impermanent-loss-calc/src/utils/: logger.ts
code-examples/typescript/04-dlmm-range-orders/: package.json  tsconfig.json
code-examples/typescript/04-dlmm-range-orders/src/: AutomatedExecutor.ts  RangeOrderManager.ts  RangeOrderMonitor.ts  index.ts
code-examples/typescript/04-dlmm-range-orders/src/types/: saros.d.ts
code-examples/typescript/04-dlmm-range-orders/src/utils/: binMath.ts  logger.ts
code-examples/typescript/05-multi-hop-routing/: .env.example  jest.config.js  package.json
code-examples/typescript/05-multi-hop-routing/src/: ArbitrageDetector.ts  MultiHopRouter.ts  RouteAnalyzer.ts  RouteExecutor.ts  index.ts
code-examples/typescript/05-multi-hop-routing/src/utils/: graph.ts  pricing.ts
core-concepts/: amm-vs-dlmm.md
docs/: CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  EXAMPLE_GALLERY.md  README.md  WALLET_SETUP_SUMMARY.md  troubleshooting.md
docs/api-reference/: dlmm-sdk.md  typescript-sdk.md
docs/architecture/: diagrams.md
docs/core-concepts/: amm-vs-dlmm.md  bin-liquidity.md
docs/getting-started/: configuration.md  first-transaction.md  installation.md  prerequisites.md
docs/guides/: dlmm-deep-dive.md  liquidity-provision.md  sdk-comparison.md
docs/tutorials/: 01-basic-swap.md
getting-started/: configuration.md  installation.md
guides/: advanced-swap-operations.md  dlmm-deep-dive.md  dlmm-position-management.md  dlmm-quote-system.md  liquidity-provision.md  sdk-comparison.md
public/: index.html  viewer.html
public/code-examples/rust/: README.md
public/code-examples/rust/01-basic-swap/: Cargo.toml
public/code-examples/rust/01-basic-swap/src/: batch_executor.rs  main.rs.backup  mev_protection.rs  price_analyzer.rs
public/code-examples/rust/02-auto-compound/: Cargo.toml
public/code-examples/rust/02-auto-compound/src/: main.rs  notification_service.rs  position_monitor.rs  statistics.rs
public/code-examples/rust/03-impermanent-loss-calc/: README.md
public/code-examples/rust/03-impermanent-loss-calc/src/: position_analyzer.rs  types.rs
public/code-examples/rust/04-dlmm-range-orders/src/: main.rs  range_order_manager.rs
public/code-examples/rust/05-multi-hop-routing/: .env.example  Cargo.toml
public/code-examples/rust/05-multi-hop-routing/src/: arbitrage_detector.rs  pool_graph.rs  route_executor.rs  route_executor_complex.rs  types.rs
public/code-examples/rust/mock-rust-sdk/src/: bin_math.rs  client.rs  error.rs  lib.rs
public/code-examples/typescript/01-swap-with-slippage/: README.md  package.json  tsconfig.json
public/code-examples/typescript/01-swap-with-slippage/src/: DynamicSlippageSwap.ts  ErrorHandler.ts  PriceMonitor.ts  SwapManager.ts  index.ts
public/code-examples/typescript/02-auto-compound/: .env.example  README.md  package.json  tsconfig.json
public/code-examples/typescript/02-auto-compound/src/: AutoCompounder.ts  GasOptimizer.ts  RewardCalculator.ts  YieldOptimizer.ts  index.ts  saros-sdk-mock.ts
public/code-examples/typescript/03-impermanent-loss-calc/: package.json  tsconfig.json
public/code-examples/typescript/03-impermanent-loss-calc/src/: DLMMCalculator.ts  ILMonitor.ts  ImpermanentLossCalculator.ts  ReportGenerator.ts
public/code-examples/typescript/04-dlmm-range-orders/: .env.example  README.md  package.json
public/code-examples/typescript/04-dlmm-range-orders/src/: AutomatedExecutor.ts  RangeOrderManager.ts  RangeOrderMonitor.ts  (+1 more)
public/code-examples/typescript/05-multi-hop-routing/: README.md  package.json  tsconfig.json
public/css/: home.css  main.css  viewer.css
public/docs/: README.md
public/docs/getting-started/: installation.md  prerequisites.md
public/docs/guides/: security-best-practices.md
public/docs/tutorials/: 02-add-liquidity.md  03-yield-farming.md
public/js/: home.js  viewer.js
tutorials/: 01-basic-swap.md
(+17 files in other folders)
