[workspace]
resolver = "2"
members = [
    "01-basic-swap",
    "02-auto-compound",
    "03-impermanent-loss-calc",
    "04-dlmm-range-orders",
    "05-multi-hop-routing"
]

[workspace.dependencies]
# Core Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
anchor-lang = "0.29"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = "1.0"
sha2 = "0.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Math
rust_decimal = "1.32"
num-traits = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Mock SDK (for examples)
saros-dlmm-sdk = { path = "mock-rust-sdk" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Saros Finance <dev@saros.finance>"]
license = "MIT"
description = "Rust examples for Saros Finance DLMM SDK"
repository = "https://github.com/saros-finance/saros-sdk-docs"