[package]
name = "impermanent-loss-calc"
version = "0.1.0"
edition = "2021"
description = "DLMM Impermanent Loss Calculator with Real-time Analytics"
authors = ["Saros SDK Team"]

[[bin]]
name = "il_calc"
path = "src/main.rs"

[dependencies]
# Mathematical precision
rust_decimal = { version = "1.32", features = ["serde", "db-postgres"] }
num-bigint = "0.4"
num-traits = "0.2"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Data structures and collections
indexmap = "2.0"
dashmap = "5.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenv = "0.15"
config = "0.13"

# CLI and terminal UI
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
tui = { package = "ratatui", version = "0.23" }

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# CSV handling for data export
csv = "1.3"

# Statistics and analytics
statrs = "0.16"

# Mock SDK for development
saros-dlmm-sdk = { path = "../mock-rust-sdk" }

# Core Solana dependencies
solana-sdk = "1.17"

# Additional dependencies for external integrations
fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"
criterion = "0.5"

# Benchmarks (commented out - create benches/ directory if needed)
# [[bench]]
# name = "il_calculations"
# harness = false