[package]
name = "saros-dlmm-sdk"
version = "0.2.0"
edition = "2021"
description = "Mock Saros DLMM SDK for Rust examples"
authors = ["Saros Finance <dev@saros.finance>"]
license = "MIT"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
rand = "0.8"
once_cell = "1.19"
rust_decimal = { version = "1.33", features = ["serde-float"] }
rust_decimal_macros = "1.33"