[package]
name = "saros-basic-swap"
version = "0.1.0"
edition = "2021"
description = "Basic swap operations with Saros DLMM SDK"
authors = ["Saros Finance <dev@saros.finance>"]
license = "MIT"

[[bin]]
name = "swap"
path = "src/simple_main.rs"

[dependencies]
# Core dependencies
saros-dlmm-sdk = { path = "../mock-rust-sdk" }
solana-sdk = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }