[package]
name = "saros-auto-compound"
version = "1.0.0"
edition = "2021"
description = "Auto-compound yield farming strategies with Saros Finance in Rust"
license = "MIT"
authors = ["Saros Finance"]
keywords = ["saros", "solana", "defi", "yield-farming", "auto-compound"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-cron-scheduler = "0.10"

# Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"

# Saros mock SDK (use real saros-dlmm-sdk in production)
saros-dlmm-sdk = { path = "../mock-rust-sdk" }

# Async utilities
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numeric types
rust_decimal = "1.33"
num-traits = "0.2"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# HTTP client for notifications
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
bs58 = "0.5"

# Memory-efficient collections
dashmap = "5.5"

# Retry logic
backoff = "0.4"

[dev-dependencies]
tokio-test = "0.4"
assert_approx_eq = "1.1"